# NYC_reg_model_clustering

./: .gitignore  404.html  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
RESULTS/: index.html
docs/: RESULTS.md
docs/informe_tecnico/: main.bbl  main.blg  main.out  main.tex  main.toc  referencias.bib
docs/informe_tecnico/capitulos/: 01_introduccion.tex  03_feature_engineering.tex  04_clustering.aux  05_modelado.aux  06_despliegue.tex  07_conclusiones.aux
informe_tecnico/: main.aux  main.lot  main.tex
informe_tecnico/capitulos/: 01_introduccion.aux  02_eda.aux  02_eda.tex  03_feature_engineering.aux  04_clustering.tex  05_modelado.tex  06_despliegue.aux  07_conclusiones.tex
results/models/: best_model.pkl  cluster_model.pkl  pca_model.pkl  scaler.pkl
results/tables/clustering/: clustering_metrics_k.csv
results/tables/models/: model_comparison_master.csv
results/tables/pca/: pca_loadings.csv  pca_metrics.json
search/: search_index.json
src/data/: feature_engineering.py  load_data.py  preprocessing.py
src/evaluation/: metrics.py  visualization.py
src/models/: baseline.py  clustering.py  ensemble_models.py  flexible_models.py  train_model.py
src/utils/: config.py  helpers.py
streamlit_app/: app.py  config.toml
streamlit_app/components/: __init__.py  components_charts_tables.py  sidebar.py
streamlit_app/pages/: 1_Analisis_Univariante.py  2_Analisis_Exploratorio.py  3_Preprocesamiento.py  4_Modelos_Supervisados.py  5_Clustering.py  6_Evaluacion_Final_y_Comparacion.py  7_Conclusiones.py
(+1 files in other folders)
